<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.smartsolar.microgrid.ui.auth.LoginFragment"
        android:label="@string/login_title" />

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.smartsolar.microgrid.ui.auth.RegisterFragment"
        android:label="@string/register_title" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.smartsolar.microgrid.ui.home.HomeFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/prosumerHomeFragment"
        android:name="com.smartsolar.microgrid.ui.prosumer.ProsumerHomeFragment"
        android:label="@string/prosumer_foundation_title" />

    <fragment
        android:id="@+id/gridOperatorHomeFragment"
        android:name="com.smartsolar.microgrid.ui.operator.GridOperatorHomeFragment"
        android:label="@string/grid_operator_foundation_title" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.smartsolar.microgrid.ui.profile.ProfileFragment"
        android:label="@string/profile_title" />

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.smartsolar.microgrid.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile_title" />

</navigation>
